# chatbotfelias

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEVIS_ELISFA_2026-04-25.md  DEVIS_ELISFA_RESTE_A_FAIRE_2026-04-25.md  Dockerfile  GUIDE_DEPLOIEMENT_ELISFA.docx  GUIDE_DEPLOIEMENT_HOSTINGER.docx  GUIDE_DEPLOIEMENT_VPS.docx  TROUBLESHOOTING.md  _AUDIT_RAG_performance_2026-04-21.md  _LIENS_formation_officiel_2026-04-21.md  _LIENS_gouvernance_associations_gouv_2026-04-21.md  _PLAN_enrichissement_modules_2026-04-21.md  app.py  config.py  delete_non_essentials.sh  demo_eisenhower.html  deploy_eisenhower.sh  deploy_full.sh  deploy_weekend_pack.sh  docker-compose.yml  export_matrice_exemple_rh.html  kb_cache.py  lancer.bat  lancer.sh  mcp_server.json  observability.py  pyproject.toml  pytest.ini  requirements.txt  security.py  structured_logger.py  validation.py
v2/: .env.example  .env.staging.example  README.md  STAGING.md  pyproject.toml  requirements.txt
v2/app/: __init__.py  main.py  settings.py
v2/benchmark_results/: .gitignore  REPORT_2026-04-25.md  REPORT_2026-04-26_FINAL_MULTIRUN.md  REPORT_2026-04-26_FULL_BENCH.md  REPORT_2026-04-26_KB_FIX_BREAKTHROUGH.md  REPORT_2026-04-26_LLM_JUDGE_FINAL.md  REPORT_2026-04-26_MULTIRUN_BASELINE.md  REPORT_2026-04-26_TUNE.md  REPORT_2026-04-26_VOYAGE_GRID.md  REPORT_RAG_ONLY_2026-04-26.md  multirun_20260426_073856.md  multirun_20260426_085709.md  results_2026-04-25.json
v2/docker/: .dockerignore  Dockerfile  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh
v2/tests/: test_llm.py  (+9 more)
(+169 files in other folders)
