[project]
name = "chatbot-elisfa-v2"
version = "2.0.0a1"
description = "Refonte FastAPI du chatbot ELISFA (juridique/formation/RH/gouvernance)"
requires-python = ">=3.11"

dependencies = [
    # Web async natif
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Validation + config
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    # LLM
    "anthropic>=0.40",
    # Observability (Sprint 3.3)
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",            # client async pour tests FastAPI
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short --strict-markers"
